@@ -11,6 +11,15 @@ module Nokogiri
         end
         assert_equal("<?xml version=\"1.0\"?><root><![CDATA[hello world]]></root>", builder.to_xml.gsub(/\n/, ''))
       end
+
+      def test_builder_no_block
+        string = "hello world"
+        builder = Nokogiri::XML::Builder.new
+        builder.root { |root|
+          root.cdata string
+        }
+        assert_equal("<?xml version=\"1.0\"?><root><![CDATA[hello world]]></root>", builder.to_xml.gsub(/\n/, ''))
+      end
     end
   end
 end
